[package]
name = "anki-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
axum = { version = "0.8.8", features = ["multipart", "macros"] }
axum-macros = "0.5.0"
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.8", features = ["timeout", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.125.0", features = ["behavior-version-latest"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tokio-postgres = { version = "0.7.16", features = ["with-chrono-0_4", "array-impls", "with-serde_json-1", "with-uuid-1"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
futures = "0.3.32"
async-recursion = "1.1.1"
flate2 = "1.1.9"
base64 = "0.22.1"
regex = "1.12.3"
bb8-postgres = "0.9.0"
once_cell = "1.21.3"
sentry = "0.46.2"
axum-client-ip = "1.3.1"
rust-argon2 = "3.0.0"
html5ever = "*"
ammonia = "4.1.2"
dotenvy = "0.15.7"
md-5 = "0.10.6"
sha2 = "0.10.9"
async_zip = { version = "0.0.18", features = ["full"] }
svg-hush = "0.9.6"
bytes = "1.11.1"
hex = "0.4.3"
governor = "0.10.4"
tower_governor = { version = "0.8.0", features = ["axum"] }
rand = "0.10.0"
lazy_static = "1.5.0"
rayon = "1.11.0"
hmac = "0.12.1"
hyper = "1.8.1"
http-body-util = "0.1.3"
serde_urlencoded = "0.7.1"
infer = "0.19.0"

[dependencies.uuid]
version = "1.22.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

